# event_chains

./: Cargo.toml  README.md
examples/: adversarial_demo.rs  besteffort_demo.rs  integration_test.rs
src/: lib.rs
src/core/: event_chain.rs  event_failure.rs  event_result.rs
src/middleware/: chaos.rs  circuit_breaker.rs  fuzzing.rs  logging.rs  metrics.rs  mod.rs  rate_limit.rs  retry.rs  timing.rs
