[package]
name = "event_chains"
version = "0.2.0"
edition = "2024"
authors = ["Jesco <jesco@gamedevmadeeasy.com>"]
license = "MIT"
description = "A flexible event processing pipeline with middleware support"
repository = "https://github.com/RPDevJesco/event_chains"
keywords = ["events", "pipeline", "middleware", "chain"]
categories = ["development-tools", "rust-patterns"]

[dependencies]
hashbrown = "0.16.0"

[[example]]
name = "besteffort_demo"
path = "examples/besteffort_demo.rs"

[[example]]
name = "integration_test"
path = "examples/integration_test.rs"
